@@ -11,6 +11,7 @@ Revision history for Dist-Mgr
       exposed comparison issues
     - Prevent the addition of multiple repository and bugtracker sections from
       being added to Makefile.PL (fixes #23; fixes #24)
+    - Prevent the addition of multiple CI badge links (fixes #22)
 
 1.00    2020-12-30
     - Fix issue where ABSTRACT was being pulled from one of the test
